<resources>
    <string name="app_name">Team7Map</string>
    <string name="action_settings">Settings</string>
    <string name="park_button">Park</string>
    <string name="deleteMarker_button">Delete</string>
    <string name="cancel_button">UnPark</string>
    <string name="save_button">Save</string>

    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="show_favorites">Favorites</string>
    <string name="favorites">Add to Favorites</string>
    <string name="about">About</string>
    <string name="navigate">Navigate</string>
    <item name="aboutPage" type="id">CSC 413 Spring 2015 Team 7</item>
</resources>
