<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MapsActivity"
    >

    <item android:id="@+id/cancel_button"
        android:title="@string/cancel_button"
        app:showAsAction="always" />

    <item android:id="@+id/deleteMarker_button"
        android:title="@string/deleteMarker_button"
        app:showAsAction="always" />

    <item android:id="@+id/navigate_button"
        android:title="@string/navigate"
        app:showAsAction="always" />

    <item android:id="@+id/save_button"
        android:title="Save"
        app:showAsAction="always" />

    <item android:id="@+id/park_button"
        android:title="@string/park_button"
        app:showAsAction="always" />


    <item android:id="@+id/settings"
        android:title="@string/settings" />

    <item android:id="@+id/history"
        android:title="@string/history" />

    <item android:id="@+id/favorites"
    android:title="@string/favorites" />


    <item android:id="@+id/about"
        android:title="@string/about" />

</menu>
